fix overflowing logo/html

--- a/style.scss
+++ b/style.scss
@@ -1,130 +1,3 @@
-// RESETS
-.section,
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-// END RESETS
 // Chapman CSS Vars
 :root {
   --cu-red: #a50034;
@@ -180,6 +53,10 @@ table {
       height: 60px;
       padding-top: 20px;
       padding-bottom: 20px;
+      @media only screen and (max-width: 1024px) {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 }
@@ -225,6 +102,9 @@ table {
     background-size: cover;
     display: grid;
     align-items: end;
+    @media only screen and (max-width: 1024px) {
+      min-height: 200px;
+    }
   }
 }
 
@@ -238,6 +118,10 @@ table {
     font-weight: bold;
     font-size: 30px;
     min-height: 80px;
+    @media only screen and (max-width: 1024px) {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
 }
 // END MASTHEAD
@@ -329,7 +213,14 @@ section {
     margin-top: 20px;
     margin-bottom: 20px;
     max-width: 580px;
-    min-width: 580px;
+    // min-width: 580px;
+
+    @media only screen and (max-width: 580px) {
+      max-width: unset;
+      min-width: unset;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
   &__stats {
     display: flex;
@@ -433,10 +324,6 @@ ul.why {
     display: block;
     height: 100%;
   }
-  .slate-form__wrapper {
-    position: relative;
-    width: 100%;
-  }
 
   div {
     position: relative;
@@ -444,13 +331,12 @@ ul.why {
   }
 
   form {
-    width: 100%;
-    min-width: 100%;
+    width: auto;
   }
 
   .slate-form__wrapper {
     max-width: 100%;
-    min-width: 100%;
+    min-width: unset;
     margin: unset;
 
     .action button.default {
